--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "clsx": "^2.0.0",
     "copy-to-clipboard": "^3.3.2",
     "crypto-js": "^4.2.0",
+    "ebml": "3.0.0",
     "flv.js": "^1.6.2",
     "hls.js": "^1.2.1",
     "just-once": "^2.2.0",
