--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,5 +51,5 @@ jobs:
           github_token: ${{ secrets.MY_TOKEN }}
           branch: dev
           directory: web-dist
-          repository: alist-org/web-dist
+          repository: choyakawa/alist-web-dist
           force: true
